fix styling and alignment

--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -5,18 +5,14 @@
 }
 
 .username {
-  text-align: down;
   margin-left: 50px;
+  line-height: 140px;
 }
 
 .row {
   display: flex;
   margin-bottom: 100px;
   margin-left: 10px;
-}
-
-#top_row {
-  justify-content: space-between;
 }
 
 .row_card {
@@ -33,6 +29,15 @@
 }
 
 .card_container {
+  border: 1px lightgrey;
+  border-style: solid;
+  padding: 20px;
+}
+
+.row_about {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 30px;
   border: 1px lightgrey;
   border-style: solid;
   padding: 20px;
